feat: 删除测试代码——笔记优化

--- a/笔记/笔记-2.md
+++ b/笔记/笔记-2.md
@@ -98,7 +98,9 @@ axios中有两个比较重要的概念：
 
 在客户端运行的时候使用的是客户端的store。
 
-不同的store 使用不同的请求实例！！！Ï
+不同的store 使用不同的store实例！！！
+
+那我们请求的实例也可以根据不同的宿主进行 定制化的生成。
 
 ![image-20210810200405122](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/withExtraArgument配置方法.png)
 
@@ -114,25 +116,31 @@ axios中有两个比较重要的概念：
 
 
 
+
+
+这个是fetch版本实现的
+
+![image-20210929194051066](assets/withExtraArgument-001.png)
+
 ## 6-4 使用 renderRoutes 方法实现对多级路由的支持
 
 多级路由
 
-renderRoutes 作用 渲染一级路由，并且把耳机路由的相关信息交给二级路由组件
+renderRoutes 作用 渲染一级路由，并且把一级路由的相关信息交给二级路由组件
 
-![](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/嵌套路由.png)
-
-
-
-
-
-![image-20210810203352081](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/嵌套路由-02.png)
+![](assets/嵌套路由.png)
 
 
 
 
 
-![image-20210810203645048](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/嵌套路由-03.png)
+![image-20210810203352081](assets/嵌套路由-02.png)
+
+
+
+**renderRoutes**  做的事情很简单就是将当前url路由匹配的组件的子路由对应的组件的props中添加 route.routes 属性
+
+![image-20210929201342008](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/render-routes.png)
 
 ## 6-4 登陆功能的制作
 
@@ -142,25 +150,19 @@ renderRoutes 作用 渲染一级路由，并且把耳机路由的相关信息交
 
 问题 node服务器  做proxy做接口转发的时候不会转发cookie等信息
 
-![image-20210810210039958](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/由于进行接口转发没有携带cookie导致的问题.png)
+![image-20210810210039958](assets/由于进行接口转发没有携带cookie导致的问题.png)
 
 ## 6-6 解决登陆cookie 传递的问题
 
 通过函数的方式生成axios 实例 然后获取到cookie 然后请求后端接口
 
-![image-20210810210608409](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/cookie传递.png)
+![image-20210810210608409](assets/cookie传递.png)
 
 
 
 ## 7-1 secret密钥的统一管理
 
-![image-20210814163340154](/Users/zhengfan/Desktop/coooode/react-ssr/笔记/assets/axios.create-实例的概念.png)
-
-
-
-
-
-
+![image-20210814163340154](assets/axios.create-实例的概念.png)
 
 
 
